--- a/mysite/.circleci/config.yml
+++ b/mysite/.circleci/config.yml
@@ -1,49 +1,21 @@
 version: 2.1
+
 orbs:
-    python: circleci/python@0.2.1
+  python: circleci/python@0.2.1
 
 jobs:
   build-and-test:
     executor: python/default
-    docker:
-      # specify the version you desire here
-      - image: circleci/python:latest
-
-
-    working_directory: ~/repo
-
     steps:
       - checkout
       - python/load-cache
       - python/install-deps
       - python/save-cache
-
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "pollsapi/requirements.txt" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
       - run:
-          name: install dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r pollsapi/requirements.txt
+          command: ./manage.py test
+          name: Test
 
-      - save_cache:
-          paths:
-            - ./venv
-          key: v1-dependencies-{{ checksum "requirements.txt" }}
-
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            cd pollsapi
-            python manage.py test pollsapi.tests.TestPollsApi
-
-      - store_artifacts:
-          path: test-reports
-          destination: test-reports
+workflows:
+  main:
+    jobs:
+      - build-and-test
