--- a/mysite/.circleci/config.yml
+++ b/mysite/.circleci/config.yml
@@ -1,21 +1,29 @@
-version: 2.1
-
-orbs:
-  python: circleci/python@0.2.1
-
+version: 2
 jobs:
   build-and-test:
-    executor: python/default
+    docker:
+    - image: circleci/python:latest
     steps:
-      - checkout
-      - python/load-cache
-      - python/install-deps
-      - python/save-cache
-      - run:
-          command: ./manage.py test
-          name: Test
-
+    - checkout
+    - restore_cache:
+        keys:
+        - pip-{{ checksum "pollsapi/requirements.txt"  }}
+    - run:
+        command: |
+          if true; then
+            pip install --user -r pollsapi/requirements.txt
+          else
+            pip install -r pollsapi/requirements.txt
+          fi
+        name: Install Dependencies
+    - save_cache:
+        key: pip-{{ checksum "requirements.txt"  }}
+        paths:
+        - /home/circleci/.local/lib/
+    - run:
+        command: ./manage.py test
+        name: Test
 workflows:
   main:
     jobs:
-      - build-and-test
+    - build-and-test
